--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,53 @@
   }
 
 
+:root {
+    /* Color styles */
+  --color-blue: hsla(223, 86%, 50%, 1);
+  --color-ui-border: hsla(0, 0%, 88%, 1);
+  --color-neutral-grey: hsla(0, 0%, 76%, 1);
+  --color-text-primary: hsla(0, 0%, 9%, 1);
+  --color-text-grey: hsla(0, 0%, 41%, 1);
+
+  /* Text-size styles */
+    /* base size: title---small (14px) */
+    --display---large: 4.07rem;
+    --display---medium: 3.21rem;
+    --display---small: 2.57rem;
+    --headline---large: 2.29rem;
+    --headline---medium: 2rem;
+    --headline---small: 1.71rem;
+    --title---large: 1.57rem;
+    --title---medium: 1.14rem;
+    --title---small: 1rem;
+    --label---large: 1rem;
+    --label---medium: 0.86rem;
+    --label---small: 0.79rem;
+    --body---large: 1.14rem;
+    --body---medium: 1rem;
+    --body---small: 0.86rem;
+
+
+}
+
+
+
+
+
 
 
 p {
     color: hsl(0, 0%, 14%);
     font-family: "Nokora", sans-serif;
-}  
+    font-size: var(--title---medium);
+    
+} 
+
+.secondary {
+  color: var(--color-text-grey);
+  font-size: var(--title---small);
+  
+}
 
 
 h1 {
@@ -77,15 +118,20 @@ h3 {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 32px;
-    padding-right: 32px;
+    /* padding-left: 32px;
+    padding-right: 32px; */
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
 
+
+.left {
+  display: flex;
+  gap: 2rem;
+}
 
 
 .right {
@@ -94,15 +140,17 @@ h3 {
 }
 
 .container {
-    /* background-color: bisque; */
-    /* border: 1px solid #000; */
-    max-width: 1100px;
+    /* background-color: bisque;
+    border: 1px solid #000; */
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 32px;
-    padding-right: 32px;
-    height: 100vh;
-    padding-top: 2rem;
+    /* padding-left: 32px;
+    padding-right: 32px; */
+    height: auto;
+    /* padding-top: 2rem;
+    padding-bottom: 2rem; */
+
     
 }
 
@@ -181,20 +229,39 @@ h3 {
 }
 
 .card-title {
-    background-color: #B8B8B8;
+    background-color: var(--color-neutral-grey);
+    padding: 0.375rem 0.75rem;
     border-radius: 16px;
-    padding: 4px 12px;
-    font-size: 1rem;
-    line-height: 140%;
+    line-height: 1.25rem;
+    text-align: center;
     width: fit-content;
+    font-family: 'Nokora';
+    font-size: var(--label---large);
+    
     
     
 }
 
 .intro {
+  p {
+    font-size: var(--headline---small);
+  }
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
+    
+
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
 }
