--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,8 @@ h3 {
 }
 
 .container {
-    /* background-color: bisque;
-    border: 1px solid #000; */
+    background-color: bisque;
+    border: 1px solid #000;
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
@@ -157,11 +157,19 @@ h3 {
 .grid{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(3, 1fr );
     grid-template-rows: auto;
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
+
+      grid-template-areas: 
+        'about about experience'
+        'work  project project'
+        'motto clients clients'
+        'motto expertise contact';
+        
 }
+
 
 .content-block {
     background-color: rgb(210, 210, 210);
@@ -172,7 +180,6 @@ h3 {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 4rem;
-   
     height: 100%; 
     border-radius: 0.5rem;
     box-shadow: 2px 2px 21.6px 3px rgba(93, 93, 93, 0.12);
@@ -180,33 +187,39 @@ h3 {
 }
 
 .about {
-    grid-column-start: 1;
-    grid-column-end: 9;
-    
+    grid-area: about;
+    /* grid-column-start: 1;
+    grid-column-end: 9; */
+  
 }
 
 .experience {
-    grid-column-start: 9;
-    grid-column-end: 13;
-}
-
-.three {
-    grid-column-start: 1;
-    grid-column-end: 5;
+    grid-area: experience;
+    /* grid-column-start: 9;
+    grid-column-end: 13; */
 
 }
 
-.four {
-    grid-column-start: 5;
-    grid-column-end: 13;
+.work {
+    grid-area: work;
+    /* grid-column-start: 1;
+    grid-column-end: 5; */
+
+}
+
+.featured-project {
+    grid-area: project;
+    /* grid-column-start: 5;
+    grid-column-end: 13; */
     background-image: url("assets/images/placeholder.png");
     background-position: 0 0, 0 0;
     background-size: cover;
 }
 
-.five {
-    grid-column: 1 / 5;
-    grid-row: 3/ 5;
+.motto {
+  grid-area: motto;
+    /* grid-column: 1 / 5;
+    grid-row: 3 / 5; */
     background-image: url("assets/images/placeholder.png");
     background-position: 0 0, 0 0;
     background-size: cover;
@@ -215,17 +228,20 @@ h3 {
     
 }
 
-.six {
-    grid-column: 5 / 13;
+.clients {
+  grid-area: clients;
+    /* grid-column: 5 / 13; */
 }    
 
-.seven {
-    grid-column: 5 / 8;
+.expertise {
+  grid-area: expertise;
+    /* grid-column: 5 / 8; */
     
 }
 
-.eight {
-    grid-column: 8 / 13;
+.contact {
+  grid-area: contact;
+    /* grid-column: 8 / 13; */
 }
 
 .card-title {
@@ -264,4 +280,47 @@ h3 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 
+}
+
+
+@media (max-width: 991px) {
+  
+  .container {
+    background-color: blue;
+  }
+
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+    "about about"
+    "experience experience"
+    "project project"
+    "work work"
+    "clients clients"
+    "expertise motto"
+    "contact contact"
+    ;
+  }
+   
+}
+
+@media (max-width: 768px) {
+
+.container {
+  background-color:blueviolet
+}
+
+  .grid {
+    grid-template-columns: repeat(1,1fr);
+    grid-template-areas: 
+    "about "
+    "experience "
+    "project "
+    "work "
+    "clients "
+    "expertise "
+    "motto"
+    "contact "
+    ;
+  }
 }
