--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,13 @@
 
 }
 
+h1 {
+  font-size: var(--title---large);
+}
 
-
-
+h3 {
+  font-size: var(--label---large);
+}
 
 
 
@@ -121,8 +125,8 @@ h3 {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    /* padding-left: 32px;
-    padding-right: 32px; */
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -140,16 +144,16 @@ h3 {
 }
 
 .container {
-    background-color: bisque;
-    border: 1px solid #000;
+    /* background-color: bisque;
+    border: 1px solid #000; */
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    /* padding-left: 32px;
-    padding-right: 32px; */
+    padding-left: 1rem;
+    padding-right: 1rem;
     height: auto;
-    /* padding-top: 2rem;
-    padding-bottom: 2rem; */
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 
     
 }
@@ -283,25 +287,73 @@ h3 {
 }
 
 
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.list-item {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--color-neutral-grey);
+   
+
+  p {
+    font-size: var(--title---medium);
+    color: var(--color-text-primary)
+  }
+}
+
+.list-item:last-child {
+  border: none;
+}
+
+
+.list-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  p {
+    font-size: var(--label---large);
+    color: var(--color-text-grey);
+  }
+}
+
+
+
+
+
 @media (max-width: 991px) {
-  
+
   .container {
     background-color: blue;
   }
 
   .grid {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-    "about about"
-    "experience experience"
-    "project project"
-    "work work"
-    "clients clients"
-    "expertise motto"
-    "contact contact"
+    grid-template-areas:
+      "about about"
+      "experience experience"
+      "project project"
+      "work work"
+      "clients clients"
+      "expertise motto"
+      "contact contact"
     ;
   }
-   
+
+  .left h1 {
+
+    font-size: var(--title---small);
+    color: coral;
+  }
+
+  .right h3 {
+    font-size: var(--label---large);
+  }
 }
 
 @media (max-width: 768px) {
