--- a/styles.css
+++ b/styles.css
@@ -347,8 +347,7 @@ h3 {
 
   .left h1 {
 
-    font-size: var(--title---small);
-    color: coral;
+    font-size: var(--title---large);
   }
 
   .right h3 {
@@ -374,5 +373,11 @@ h3 {
     "motto"
     "contact "
     ;
+  }
+
+  .top_nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
 }
