--- a/styles.css
+++ b/styles.css
@@ -208,13 +208,15 @@ h3 {
     /* grid-column-start: 1;
     grid-column-end: 5; */
 
+
 }
+
 
 .featured-project {
     grid-area: project;
     /* grid-column-start: 5;
     grid-column-end: 13; */
-    background-image: url("assets/images/placeholder.png");
+    background-image: url("assets/images/abstract.jpeg");
     max-width: 100%;
     background-position: 0 0, 0 0;
     background-size: cover;
@@ -290,6 +292,11 @@ h3 {
   gap: 2rem;
   border-top: var(--color-text-grey) 1px solid;
   
+  p{
+    color: var(--color-text-grey);
+    font-size: var(--body---large);
+  }
+  
 }
 
 
@@ -343,6 +350,8 @@ h3 {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
 
@@ -360,6 +369,7 @@ h3 {
   flex-direction: column;
   padding-bottom: 1rem;
   border-bottom: 1px solid var(--color-neutral-grey);
+
    
 
   p {
@@ -368,10 +378,24 @@ h3 {
   }
 }
 
+.small {
+  p {
+    font-size: var(--label---small);
+    color: var(--color-text-grey);
+  }
+
+}
+
 .list-item:last-child {
   border: none;
 }
 
+.left-title.big {
+  p{
+  font-size: var(--title---large);
+  color: var(--color-text-primary);
+  }
+}
 
 .list-row{
   display: flex;
@@ -383,6 +407,7 @@ h3 {
     font-size: var(--label---large);
     color: var(--color-text-grey);
   }
+
 }
 
 .arrowBtn {
@@ -434,6 +459,16 @@ h3 {
     ;
   }
 
+  .featured-project{
+    min-height: 400px;
+  }
+
+  .motto {
+    min-height: 400px;
+  }
+
+
+
   .left h1 {
 
     font-size: var(--title---large);
@@ -446,9 +481,15 @@ h3 {
 
 @media (max-width: 768px) {
 
+.featured-project{
+  
+  background-position: center;
+}
+
 .container {
   /* background-color:blueviolet */
 }
+
 
   .grid {
     grid-template-columns: repeat(1,1fr);
