--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ h1 {
 
 h3 {
   font-size: var(--label---large);
+    
 }
 
 
@@ -153,8 +154,19 @@ h3 {
     height: auto;
     padding-top: 1rem;
     padding-bottom: 1rem;
+}
 
-    
+.container-smaller {
+    /* background-color: bisque;
+    border: 1px solid #000; */
+    max-width: 1144px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    height: auto;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .grid{
@@ -165,14 +177,77 @@ h3 {
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
 
-      grid-template-areas: 
-        'about about experience'
-        'work  project project'
-        'motto clients clients'
-        'motto expertise contact';
-    word-break: break-word;
+      grid-template-areas:
+          'about about experience'
+          'work  project project'
+          'motto clients clients'
+          'motto expertise contact';
+      word-break: break-word;
 }
 
+.grid-about {
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas:
+    'bio bio profile-pic';
+  word-break: break-word;
+  gap: 5rem;
+  
+}
+
+.divider {
+  width: 100%; /* Gör dividern 100% av sin förälder */
+  max-width: 339px; /* Begränsar maxbredden till 339px */
+  height: 1px; /* Samma höjd som din SVG */
+  background-color: #DFDFDF; /* Samma färg som din SVG */
+  margin: 20px 0; /* Lägger till lite marginal för att separera den från andra element, justera efter behov */
+}
+  
+  
+
+
+.bio {
+  grid-area: bio;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+}
+
+.intro h2 {
+  font-family: "Nokora", sans-serif;
+  font-weight: 400;
+  font-style: var(--title---large);
+  color: var(--color-text-primary);
+}
+
+.short-text {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  
+
+      .left-text {
+        display: flex;
+        flex: 1 0 0;
+      }
+
+      .right-text{
+        display: flex;
+        flex-direction: column;
+        flex: 1 0 0;
+        justify-content: space-between;
+        
+      }
+
+}
+
+.profile-pic {
+  background-image: url("/assets/images/abstract2.jpg");
+  border-radius: 0.75rem;
+  background-position: center;
+  background-size: cover;
+  grid-area: profile-pic;
+} 
 
 .content-block {
     background-color: rgb(210, 210, 210);
