--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,10 @@ h3 {
     height: auto;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+
 }
 
 .grid{
@@ -248,6 +252,33 @@ h3 {
   background-size: cover;
   grid-area: profile-pic;
 } 
+
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.bounce {
+  position: relative;
+  width: 100%;
+  height: 30rem;
+  border: 2px solid #000;
+  overflow: hidden;
+}
+
+.word {
+  position: absolute;
+  font-size: 20px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  user-select: none;
+  white-space: nowrap;
+}
+
 
 .content-block {
     background-color: rgb(210, 210, 210);
