--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,8 @@ h3 {
   display: flex;
   flex-direction: row;
   gap: 2rem;
+  font-family:"Nokora", sans-serif;
+  font-style: var(--body---large);
   
 
       .left-text {
@@ -246,7 +248,7 @@ h3 {
 }
 
 .profile-pic {
-  background-image: url("/assets/images/abstract2.jpg");
+  background-image: url("assets/images/abstract2.jpg");
   border-radius: 0.75rem;
   background-position: center;
   background-size: cover;
@@ -259,13 +261,21 @@ h3 {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  gap: 1rem;
+
+    h2 {
+      font-size: var(--display---large);
+      font-weight: 300;
+      font-family:"Nokora", sans-serif; 
+    } 
 }
 
 .bounce {
   position: relative;
   width: 100%;
   height: 30rem;
-  border: 2px solid #000;
+  border: 1px solid var(--color-ui-border);
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 
@@ -274,10 +284,19 @@ h3 {
   font-size: var(--title---large);
   position: absolute;
   padding: 5px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(34, 126, 192, 0.1);
   border-radius: 5px;
   user-select: none;
   white-space: nowrap;
+}
+
+#word7 {
+  color: lightcoral;
+  opacity: 0;
+}
+
+#word7:hover {
+  opacity: 100;
 }
 
 
