--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,3 @@
-/*
-  1. Use a more-intuitive box-sizing model.
-*/
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  /*
-    2. Remove default margin
-  */
-  * {
-    margin: 0;
-  }
-  /*
-    Typographic tweaks!
-    3. Add accessible line-height
-    4. Improve text rendering
-  */
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  /*
-    5. Improve media defaults
-  */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  /*
-    6. Remove built-in form typography styles
-  */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
-    7. Avoid text overflows
-  */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  /*
-    8. Create a root stacking context
-  */
-  #root, #__next {
-    isolation: isolate;
-  }
-
-
 :root {
     /* Color styles */
   --color-blue: hsla(223, 86%, 50%, 1);
@@ -75,7 +27,7 @@
 
 }
 
-h1 {
+/* h1 {
   font-size: var(--title---large);
   color: hsl(0, 0%, 14%);
   font-family: "Nokora", sans-serif;
@@ -97,7 +49,7 @@ p {
     font-family: "Nokora", sans-serif;
     font-size: var(--title---medium);
     
-} 
+}  */
 
 .secondary {
   color: var(--color-text-grey);
@@ -248,7 +200,7 @@ h3 {
 }
 
 .profile-pic {
-  background-image: url("assets/images/abstract2.jpg");
+  background-image: url("/assets/images/abstract2.jpg");
   border-radius: 0.75rem;
   background-position: center;
   background-size: cover;
@@ -342,7 +294,7 @@ h3 {
     grid-area: project;
     /* grid-column-start: 5;
     grid-column-end: 13; */
-    background-image: url("assets/images/abstract.jpeg");
+    background-image: url("/assets/images/abstract.jpeg");
     max-width: 100%;
     background-position: 0 0, 0 0;
     background-size: cover;
@@ -353,7 +305,7 @@ h3 {
   grid-area: motto;
     /* grid-column: 1 / 5;
     grid-row: 3 / 5; */
-    background-image: url("assets/images/placeholder.png");
+    background-image: url("/assets/images/abstract.jpeg");
     background-position: 0 0, 0 0;
     background-size: cover;
     
