added buttons + about responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
 @import url('button.css');
 
 
-/* 
+
 body {
     font-family: "Nokora", sans-serif;
     background-color: var(--background-color);
     color: var(--color-text-primary);
-} */
+}
