--- a/css/button.css
+++ b/css/button.css
@@ -10,7 +10,9 @@
     cursor: pointer;
     outline: none;
     transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+    text-decoration: none;
 }
+
 
 .button .icon-left {
     margin-right: 8px;
