--- a/css/typography.css
+++ b/css/typography.css
@@ -17,6 +17,7 @@
     --title---large: 1.57rem;
     --title---medium: 1.14rem;
     --title---small: 1rem;
+    --subheader: 1.29rem;
     --label---large: 1rem;
     --label---medium: 0.86rem;
     --label---small: 0.79rem;
