--- a/css/styles.css
+++ b/css/styles.css
@@ -626,6 +626,6 @@ h3 {
   background-position: center;
   background-size: cover;
   min-height: 500px;
-  filter: grayscale(100%);
+  /* filter: grayscale(100%); */
   
 }
