--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ body {
 
 .section {
     margin-bottom: 4rem;
+    margin-top: 2rem;
 }
 
 .section-header {
@@ -88,7 +89,6 @@ body {
 
 .section-image {
     width: 100%;
-    /* max-height: 30rem; */
     overflow: hidden;
     margin: 2rem 0;
     display: flex;
@@ -167,4 +167,12 @@ body {
 
 .arrowBtn:hover {
     opacity: 0.7;
+}
+
+.avatar {
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+    object-fit: cover;
 }
