--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,18 @@ h3 {
 }
 
 
+.featured-project {
+    grid-area: project;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.featured-project:hover {
+    transform: scale(0.98);
+}
+
 .featured-project-link {
     display: block;
     width: 100%;
@@ -236,38 +248,19 @@ h3 {
     color: inherit;
 }
 
-.featured-project {
-    grid-area: project;
-    background-image: url("/assets/images/Coop/coop\ insights\ cover.png");
-    max-width: 100%;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.featured-project::before {
-    content: '';
+.featured-project-link img {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: inherit;
-    background-position: center;
-    background-size: cover;
-    transition: transform 0.3s ease;
-    z-index: 1;
-}
-
-.featured-project:hover::before {
-    transform: scale(1.05);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .featured-project .titles {
     position: relative;
-    z-index: 2;
+    z-index: 1;
+    padding: 1.5rem;
 }
 
 .motto {
