Refactor about.html to reposition joy section header and comment out profile picture; update main.css to add padding for bounce h2 element.

--- a/css/main.css
+++ b/css/main.css
@@ -291,3 +291,9 @@ body {
         font-size: var(--body---medium);
     }
 }
+
+
+.bounce h2 {
+    padding-left: 1rem;
+    position: absolute;
+}
