dirty work on work page

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,15 @@ h3 {
   
 }
 
+.grid-work {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  gap: 5rem;
+  width: 100%;
+  min-height: 800px;
+}
+
 .divider {
   width: 100%;
   height: 1px;
