turned the footer into a component

--- a/css/styles.css
+++ b/css/styles.css
@@ -411,13 +411,21 @@ h3 {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-
+  padding: 2rem 1rem;
 }
 
+.footer .left,
+.footer .right {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.footer h3 {
+  margin: 0;
+  font-size: var(--label---large);
+  color: var(--color-text-grey);
+}
 
 .list {
   display: flex;
@@ -638,6 +646,19 @@ h3 {
     width: calc(400%);
   }
 
+  .footer {
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    text-align: center;
+    padding: 1.5rem 1rem;
+  }
+
+  .footer .left,
+  .footer .right {
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 .wrapper {
