--- a/css/button.css
+++ b/css/button.css
@@ -25,6 +25,7 @@
 .text-button {
     background-color: transparent;
     color: var(--color-text-primary);
+    
 }
 
 .text-button:hover {
@@ -112,7 +113,7 @@
     font-size: 1.5rem;
     font-weight: 400;
     color: var(--color-text-primary);
-    background-color: rgba(20, 81, 237, 0.12);
+    /* background-color: rgba(20, 81, 237, 0.12); */
     border-radius: 8px;
     padding: 8px 16px;
 }
