--- a/css/main.css
+++ b/css/main.css
@@ -191,11 +191,11 @@ body {
 }
 
 .avatar {
-    width: 96px;
-    height: 96px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    object-fit: cover;
+    /* width: 96px;
+    height: 96px; */
+    /* border-radius: 50%; */
+    object-fit: fill;
+    /* border: 1px solid var(--color-ui-border); */
 }
 
 /* Base featured project styles */
